added js smooth scroll fallback for incompatible browsers

--- a/index.html
+++ b/index.html
@@ -203,5 +203,7 @@
       }
     </script>
     <script src="./resources/js/animations-controller.js"></script>
+    <script src="./resources/js/behaviors.js"></script>
+    <script defer src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
   </body>
 </html>
