changed hero button's label

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="hero-text-box">
           <span class="subtitle">Full Stack Developer</span>
           <p class="hero-text">Let me bring you amazing ideas to life</p>
-          <button class="hero-button">Hire me</button>
+          <button class="hero-button">Get started</button>
         </div>
         <div class="hero-image">
           <img src="./resources/images/avatar.png" alt="hero image" />
