styled links with class .button like buttons (fixed html validation error)

--- a/index.html
+++ b/index.html
@@ -25,24 +25,24 @@
       </button>
       <ul class="action-button-items">
         <li class="action-button-item">
-          <a href="#header-section">
-            <button><i class="fa fa-home"></i></button>
-          </a>
+          <a href="#header-section" class="button"
+            ><i class="fa fa-home"></i
+          ></a>
         </li>
         <li class="action-button-item">
-          <a href="#about-section">
-            <button><i class="fa fa-user"></i></button>
-          </a>
+          <a href="#about-section" class="button"
+            ><i class="fa fa-user"></i
+          ></a>
         </li>
         <li class="action-button-item">
-          <a href="#skills-section">
-            <button><i class="fa fa-tools"></i></button>
-          </a>
+          <a href="#skills-section" class="button"
+            ><i class="fa fa-tools"></i
+          ></a>
         </li>
         <li class="action-button-item">
-          <a href="#portfolio-section">
-            <button><i class="fa fa-lightbulb-o"></i></button>
-          </a>
+          <a href="#portfolio-section" class="button"
+            ><i class="fa fa-lightbulb-o"></i
+          ></a>
         </li>
       </ul>
     </div>
@@ -50,18 +50,26 @@
       <nav class="navigation">
         <span class="logo">Papi Diagne</span>
         <div class="navigation-menu">
-          <a href="" class="navigation-item navigation-item__active">Home</a>
+          <a href="#" class="navigation-item navigation-item__active">Home</a>
           <a href="#about-section" class="navigation-item">About Me</a>
           <a href="#skills-section" class="navigation-item">Skills</a>
           <a href="#portfolio-section" class="navigation-item">Portfolio</a>
         </div>
-        <button class="header-button">Hire Me</button>
+        <a
+          href="mailto: pabdoulaye.diagne96@gmail.com"
+          class="button header-button"
+          >Hire Me</a
+        >
       </nav>
       <div class="hero-section">
         <div class="hero-text-box">
           <span class="subtitle">Full Stack Developer</span>
           <p class="hero-text">Let me bring you amazing ideas to life</p>
-          <button class="hero-button">Get started</button>
+          <a
+            class="button hero-button"
+            href="mailto: pabdoulaye.diagne96@gmail.com"
+            >Get started</a
+          >
         </div>
         <div class="hero-image">
           <img src="./resources/images/avatar.png" alt="hero image" />
