added copyright icon

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           ></a>
         </div>
       </div>
-      <p class="copyright">Copyright papidiagne30 2021. All rights reserved.</p>
+      <p class="copyright">© Copyright papidiagne30 2021. All rights reserved.</p>
     </footer>
     <script src="./resources/js/animations-controller.js"></script>
     <script src="./resources/js/behaviors.js"></script>
