added fixed navbar on larger screens

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <nav class="navigation">
         <span class="logo">Papi Diagne</span>
         <div class="navigation-menu">
-          <a href="#" class="navigation-item navigation-item__active">Home</a>
+          <a href="#header-section" class="navigation-item navigation-item__active">Home</a>
           <a href="#about-section" class="navigation-item">About Me</a>
           <a href="#skills-section" class="navigation-item">Skills</a>
           <a href="#portfolio-section" class="navigation-item">Portfolio</a>
