added transition effect to the action button's rotation

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <button
         id="action-button"
         class="action-button"
-        onclick="toggleActionButton()"
+        onclick="toggleActionButton(); rotateBackActionButton();"
       >
         <i class="fa fa-plus"></i>
       </button>
