added menu links activation on scroll

--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
           ></a>
         </li>
         <li class="action-button-item">
-          <a href="#about-section" class="button"
-            ><i class="fa fa-user"></i
-          ></a>
+          <a href="#about-section" class="button"><i class="fa fa-user"></i></a>
         </li>
         <li class="action-button-item">
           <a href="#skills-section" class="button"
@@ -50,7 +48,11 @@
       <nav class="navigation">
         <span class="logo">Papi Diagne</span>
         <div class="navigation-menu">
-          <a href="#header-section" class="navigation-item navigation-item__active">Home</a>
+          <a
+            href="#header-section"
+            class="navigation-item navigation-item--active"
+            >Home</a
+          >
           <a href="#about-section" class="navigation-item">About Me</a>
           <a href="#skills-section" class="navigation-item">Skills</a>
           <a href="#portfolio-section" class="navigation-item">Portfolio</a>
@@ -195,7 +197,9 @@
           ></a>
         </div>
       </div>
-      <p class="copyright">© Copyright papidiagne30 2021. All rights reserved.</p>
+      <p class="copyright">
+        © Copyright papidiagne30 2021. All rights reserved.
+      </p>
     </footer>
     <script src="./resources/js/animations-controller.js"></script>
     <script src="./resources/js/behaviors.js"></script>
