--- a/index.html
+++ b/index.html
@@ -89,10 +89,11 @@
         >
       </div>
       <p class="about-text js--scroll appear">
-        I enjoy being challenged and engaging with projects that require me to
-        work outside my comfort and knowledge set, as continuing to learn new
-        languages and development techniques are important to me and the success
-        of your projects.
+        I am highly skilled in designing, testing and developing mobile and web 
+applications with clean and designs, optimized for high performance and 
+search engines.</br>
+<span class="about-important">If you are business/invidual seeking for online presence, or are looking 
+hire, <a class="about-link" href="mailto:pabdoulaye.diagne96@gmail.com">hit me up</a></span>.
       </p>
     </section>
     <section id="skills-section" class="skills-section">
