--- a/index.html
+++ b/index.html
@@ -5,20 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Papi Diagne</title>
+    <meta
+      name="description"
+      content="Hey there, I am Papi Diagne and I am a Full Stack Developer. If you are business/invidual seeking for online presence, or are looking 
+hire, hit me up."
+    />
     <link rel="stylesheet" href="./resources/css/style.css" />
     <link rel="stylesheet" href="./resources/css/queries.css" />
     <link rel="stylesheet" href="./resources/css/animations.css" />
-    <link rel="apple-touch-icon" sizes="180x180" href="./resources/images/favicon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="./resources/images/favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="./resources/images/favicon/site.webmanifest">
-<link rel="mask-icon" href="./resources/images/favicon/safari-pinned-tab.svg" color="#5bbad5">
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="theme-color" content="#ffffff">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./resources/images/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./resources/images/favicon/favicon-32x32.png"
+    />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="./resources/images/favicon/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="./resources/images/favicon/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
     <script
       src="https://kit.fontawesome.com/352217b73d.js"
       crossorigin="anonymous"
     ></script>
+    <!-- Twitter Card-->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@papidiagne30" />
+    <meta name="twitter:title" content="$pageTitle" />
+    <meta name="twitter:description" content="$description" />
+    <meta name="twitter:image" content="https://www.papidiagne.dev" />
   </head>
 
   <body>
@@ -96,11 +120,16 @@
         >
       </div>
       <p class="about-text js--scroll appear">
-        I am highly skilled in designing, testing and developing mobile and web 
-applications with clean and designs, optimized for high performance and 
-search engines.</br>
-<span class="about-important">If you are business/invidual seeking for online presence, or are looking 
-hire, <a class="about-link" href="mailto:pabdoulaye.diagne96@gmail.com">hit me up</a></span>.
+        I am highly skilled in designing, testing and developing mobile and web
+        applications with clean and designs, optimized for high performance and
+        search engines.<br />
+        <span class="about-important"
+          >If you are business/invidual seeking for online presence, or are
+          looking hire,
+          <a class="about-link" href="mailto:pabdoulaye.diagne96@gmail.com"
+            >hit me up</a
+          ></span
+        >.
       </p>
     </section>
     <section id="skills-section" class="skills-section">
