added title and description to twitter card meta tags

--- a/index.html
+++ b/index.html
@@ -40,8 +40,12 @@ hire, hit me up."
     <!-- Twitter Card-->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@papidiagne30" />
-    <meta name="twitter:title" content="$pageTitle" />
-    <meta name="twitter:description" content="$description" />
+    <meta name="twitter:title" content="Papi Diagne" />
+    <meta
+      name="twitter:description"
+      content="Hey there, I am Papi Diagne and I am a Full Stack Developer. If you are business/invidual seeking for online presence, or are looking 
+    hire, hit me up."
+    />
     <meta name="twitter:image" content="https://www.papidiagne.dev" />
   </head>
 
