added website preview

--- a/index.html
+++ b/index.html
@@ -40,13 +40,14 @@ hire, hit me up."
     <!-- Twitter Card-->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@papidiagne30" />
+    <meta name="twitter:creator" content="@papidiagne30" />
     <meta name="twitter:title" content="Papi Diagne" />
     <meta
       name="twitter:description"
       content="Hey there, I am Papi Diagne and I am a Full Stack Developer. If you are business/invidual seeking for online presence, or are looking 
     hire, hit me up."
     />
-    <meta name="twitter:image" content="https://www.papidiagne.dev" />
+    <meta name="twitter:image" content="/resources/images/preview.png" />
   </head>
 
   <body>
