--- a/index.html
+++ b/index.html
@@ -47,12 +47,18 @@ hire, hit me up."
       content="Hey there, I am Papi Diagne and I am a Full Stack Developer. If you are business/invidual seeking for online presence, or are looking 
     hire, hit me up."
     />
-    <meta name="twitter:image" content="/resources/images/preview.png" />
+    <meta
+      name="twitter:image"
+      content="https://github.com/nushen96/portfolio-v2/blob/main/resources/images/preview.png"
+    />
     <!-- OpenGraph -->
     <meta property="og:title" content="Papi Diagne" />
     <meta property="og:type" content="document" />
     <meta property="og:url" content="https://www.papidiagne.dev" />
-    <meta property="og:image" content="/resources/images/preview.png" />
+    <meta
+      property="og:image"
+      content="https://github.com/nushen96/portfolio-v2/blob/main/resources/images/preview.png"
+    />
     <meta
       property="og:description"
       content="Hey there, I am Papi Diagne and I am a Full Stack Developer. If you are business/invidual seeking for online presence, or are looking 
