changed preview images url to come from domain server

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ hire, hit me up."
     />
     <meta
       name="twitter:image"
-      content="https://github.com/nushen96/portfolio-v2/blob/main/resources/images/preview.png"
+      content="https://papidiagne.dev/resources/images/preview.png"
     />
     <!-- OpenGraph -->
     <meta property="og:title" content="Papi Diagne" />
@@ -57,7 +57,7 @@ hire, hit me up."
     <meta property="og:url" content="https://www.papidiagne.dev" />
     <meta
       property="og:image"
-      content="https://github.com/nushen96/portfolio-v2/blob/main/resources/images/preview.png"
+      content="https://papidiagne.dev/resources/images/preview.png"
     />
     <meta
       property="og:description"
