changed preview image from preview.png to avatar.png

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ hire, hit me up."
       crossorigin="anonymous"
     ></script>
     <!-- Twitter Card-->
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@papidiagne30" />
     <meta name="twitter:creator" content="@papidiagne30" />
     <meta name="twitter:title" content="Papi Diagne" />
@@ -49,7 +49,7 @@ hire, hit me up."
     />
     <meta
       name="twitter:image"
-      content="https://papidiagne.dev/resources/images/preview.png"
+      content="https://papidiagne.dev/resources/images/avatar.png"
     />
     <!-- OpenGraph -->
     <meta property="og:title" content="Papi Diagne" />
@@ -57,7 +57,7 @@ hire, hit me up."
     <meta property="og:url" content="https://www.papidiagne.dev" />
     <meta
       property="og:image"
-      content="https://papidiagne.dev/resources/images/preview.png"
+      content="https://papidiagne.dev/resources/images/avatar.png"
     />
     <meta
       property="og:description"
