fixed hero-text typo

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ hire, hit me up."
       <div class="hero-section">
         <div class="hero-text-box">
           <span class="subtitle">Full Stack Developer</span>
-          <p class="hero-text">Let me bring you amazing ideas to life</p>
+          <p class="hero-text">Let me bring your amazing ideas to life</p>
           <a
             class="button hero-button"
             href="mailto: pabdoulaye.diagne96@gmail.com"
