fixed about-text typo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta
       name="description"
       content="Hey there, I am Papi Diagne and I am a Full Stack Developer. If you are business/invidual seeking for online presence, or are looking 
-hire, hit me up."
+to hire, hit me up."
     />
     <link rel="stylesheet" href="./resources/css/style.css" />
     <link rel="stylesheet" href="./resources/css/queries.css" />
@@ -45,7 +45,7 @@ hire, hit me up."
     <meta
       name="twitter:description"
       content="Hey there, I am Papi Diagne and I am a Full Stack Developer. If you are business/invidual seeking for online presence, or are looking 
-    hire, hit me up."
+    to hire, hit me up."
     />
     <meta
       name="twitter:image"
@@ -146,7 +146,7 @@ hire, hit me up."
         search engines.<br />
         <span class="about-important"
           >If you are business/invidual seeking for online presence, or are
-          looking hire,
+          to looking hire,
           <a class="about-link" href="mailto:pabdoulaye.diagne96@gmail.com"
             >hit me up</a
           ></span
