fix about-text second typo

--- a/index.html
+++ b/index.html
@@ -145,8 +145,7 @@ hire, hit me up."
         applications with clean and designs, optimized for high performance and
         search engines.<br />
         <span class="about-important"
-          >If you are business/invidual seeking for online presence, or are
-          to looking hire,
+          >If you are business/invidual seeking for online presence, or are looking to hire,
           <a class="about-link" href="mailto:pabdoulaye.diagne96@gmail.com"
             >hit me up</a
           ></span
