added google analytics tag

--- a/index.html
+++ b/index.html
@@ -64,6 +64,20 @@ to hire, hit me up."
       content="Hey there, I am Papi Diagne and I am a Full Stack Developer. If you are business/invidual seeking for online presence, or are looking 
 hire, hit me up."
     />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-2F0FMQK952"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-2F0FMQK952");
+    </script>
   </head>
 
   <body>
@@ -145,7 +159,8 @@ hire, hit me up."
         applications with clean and designs, optimized for high performance and
         search engines.<br />
         <span class="about-important"
-          >If you are business/invidual seeking for online presence, or are looking to hire,
+          >If you are business/invidual seeking for online presence, or are
+          looking to hire,
           <a class="about-link" href="mailto:pabdoulaye.diagne96@gmail.com"
             >hit me up</a
           ></span
