fixed about-text typo

--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@ hire, hit me up."
       </div>
       <p class="about-text js--scroll appear">
         I am highly skilled in designing, testing and developing mobile and web
-        applications with clean and designs, optimized for high performance and
-        search engines.<br />
+        applications with clean and modern designs, optimized for high
+        performance and search engines.<br />
         <span class="about-important"
           >If you are business/invidual seeking for online presence, or are
           looking to hire,
