--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ to hire, hit me up."
 hire, hit me up."
     />
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
+    <!-- <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-2F0FMQK952"
     ></script>
@@ -77,7 +77,8 @@ hire, hit me up."
       gtag("js", new Date());
 
       gtag("config", "G-2F0FMQK952");
-    </script>
+    </script> -->
+    <script src="resources/js/core.js" type="module"></script>
   </head>
 
   <body>
