changed action button's icon and behavior

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@ hire, hit me up."
       <button
         id="action-button"
         class="action-button"
-        onclick="toggleActionButton(); rotateBackActionButton();"
+        onclick="toggleActionButton(); handleActionButtonAnimation()"
       >
-        <i class="fa fa-plus"></i>
+        <i class="fa fa-bars"></i>
       </button>
       <ul class="action-button-items">
         <li class="action-button-item">
